--- a/scripts/rmd_notebooks/miRge3_pseudobulk.Rmd
+++ b/scripts/rmd_notebooks/miRge3_pseudobulk.Rmd
@@ -201,7 +201,7 @@ pheatmap::pheatmap(
 )
 ```
 # Muscle samples
-```{r}
+```{r fig.height=8, fig.width=8}
 tmp.feat = c(
   "mmu-let-7a-5p",
   "mmu-let-7b-5p",
@@ -210,7 +210,9 @@ tmp.feat = c(
   "mmu-let-7f-5p",
   "mmu-let-7g-5p",
   "mmu-let-7i-5p",
-  # "mmu-miR-1a-3p",
+  "mmu-miR-1a-3p",
+  "mmu-miR-1a-1-5p",
+  "mmu-miR-1a-2-5p",
   "mmu-miR-10a-5p",
   "mmu-miR-10b-5p",
   "mmu-miR-16-5p",
@@ -219,16 +221,18 @@ tmp.feat = c(
   "mmu-miR-26a-5p",
   "mmu-miR-30a-5p",
   "mmu-miR-30e-5p",
+  "mmu-miR-125b-1-3p", "mmu-miR-125b-2-3p", "mmu-miR-125b-5p",
   "mmu-miR-126a-5p",
   "mmu-miR-133a-3p/133b-3p",
   "mmu-miR-142a-3p" ,
   "mmu-miR-143-3p",
+  "mmu-miR-190a-3p",  "mmu-miR-190a-5p", 
   "mmu-miR-206-3p",
   "mmu-miR-451a",
   "mmu-miR-486a-5p/486b-5p"
   # "mmu-miR-706",
 )
-rownames(mir.rpm)[grep(rownames(mir.rpm), pattern="451")]
+rownames(mir.rpm)[grep(rownames(mir.rpm), pattern="1a")]
 
 tmp.col.nums <- c(18:44)
 
