--- a/scripts/rmd_notebooks/uTAR_analysis.Rmd
+++ b/scripts/rmd_notebooks/uTAR_analysis.Rmd
@@ -30,7 +30,6 @@ library(phateR)
 source("/home/dwm269/DWM_utils/sc_utils/seurat_helpers/seutils.R")
 source("/home/dwm269/DWM_utils/sc_utils/seurat_helpers/seuplots.R")
 source("/home/dwm269/DWM_utils/plotting_utils/scThemes.R")
-# source("/home/dwm269/DWM_utils/sc_utils/seurat_helpers/")
 ```
 
 ## Figure settings & colors
@@ -75,10 +74,13 @@ names(mckolors)
 # options(future.globals.maxSize = 2000 * 1024^2)
 ```
 
-## Load meta data 
+## Read in metadata, `meta_vis`
 ```{r}
-#TODO
-# meta_vis <- read.csv(path_to_meta_vis)
+meta_vis <- read.csv(
+  file="/workdir/dwm269/totalRNA/spTotal/resources/meta_sheet_visium.csv"
+)
+
+print(meta_vis)
 ```
 
 # Load preprocessed Seurat objects 
@@ -136,7 +138,7 @@ vis.list<- lapply(
   vis.list,
   # FUN=function(SEU) seuPreProcess(SEU,assay="TAR")
   FUN=function(SEU) NormalizeData(SEU,assay="TAR",verbose = F)
-  )
+)
 
 ```
 
@@ -154,15 +156,13 @@ for(i in 1:length(vis.list)){
     assay = "TAR",
     col.name = "percent.uTAR"
   )
-  
 }
-
 ```
 
 ```{r fig.height=10, fig.width=8, message=FALSE, warning=FALSE}
 i=c(
-  # 1:3,12:13,10:11#,
-  14:17
+  1:3,12:13,10:11#,
+  # 14:17
   )
 tmp.titles <- stringr::str_remove_all(meta_vis$sample[i],pattern = "Vis_") %>%
     stringr::str_remove_all(pattern ="yPAP_")%>%
@@ -176,23 +176,24 @@ tmp.feat <- c(
   "percent.uTAR"
   )
 
-visListPlot(
-  vis.list[i],
-  sample.titles = tmp.titles,
-  alt.titles = stringr::str_remove_all(tmp.feat,pattern = "_collapsed"),
-  assay="TAR",
-  slot = 'data',
-  reduction = 'space',
-  pt.size=0.8,
-  legend.position = "bottom",
-  font.size = 8,
-  axis.title.angle.y = 0,
-  colormap=mckolors$purple_ramp,
-  nrow = 1,
-  verbose=F,
-  features = tmp.feat
-)%>%suppressMessages()
-
+suppressMessages(
+  visListPlot(
+    vis.list[i],
+    sample.titles = tmp.titles,
+    alt.titles = stringr::str_remove_all(tmp.feat,pattern = "_collapsed"),
+    assay="TAR",
+    slot = 'data',
+    reduction = 'space',
+    pt.size=0.8,
+    legend.position = "bottom",
+    font.size = 8,
+    axis.title.angle.y = 0,
+    colormap=mckolors$purple_ramp,
+    nrow = 1,
+    verbose=F,
+    features = tmp.feat
+  )&coord_fixed(ratio=1/1.6)
+)
 ```
 
 ```{r fig.height=6, fig.width=8, message=FALSE, warning=FALSE}
@@ -220,7 +221,7 @@ ggplot(
     axis.title = element_text(size=12, color="black")
   )+
   labs(
-    x="# Transcripts (GENCODE_M27)",
+    x="# Transcripts (GENCODE_M28)",
     y="# Transcripts (TAR-scRNA-seq)"
   )+
   scale_fill_manual(values=c("gray","deepskyblue3","forestgreen"))+
@@ -230,41 +231,80 @@ ggplot(
 ```
 
 # TAR FeaturePlots
-```{r fig.height=10, fig.width=18, message=FALSE, warning=FALSE, paged.print=TRUE}
-tmp.feat 
+```{r}
 
-vis.include = 1:length(vis.list)
-tmp.titles <- stringr::str_remove_all(meta_vis$sample,pattern = "Vis_") %>%
+lapply(
+  vis.list[c(10:13)],
+  FUN=function(SEU) grepGenes(
+    SEU, assay="TAR",pattern="ENSMUSG00002075524"
+  )%>%sort()
+)
+
+```
+
+
+```{r fig.height=6, fig.width=10, message=FALSE, warning=FALSE, paged.print=TRUE}
+
+# vis.include = 1:length(vis.list)
+vis.include = c(
+  10:11,
+  12:13
+)
+
+tmp.feat <- c(
+  # "chr18-85716049-85716499---12303-0", 
+  # "chr2-72843049-72843349---7973-0",
+  # "chr2-72846549-72847149-+-130-0",
+  # "chr11-108902449-108902999---89405-0"
+  
+  "chr16-10961699-10962249-+-8939819-ENSMUSG00002076173-+-1",
+  "chr16-10961749-10962249-+-13574824-ENSMUSG00002076173-+-1"
+)
+
+# tmp.feat <- lapply(
+#   vis.list[vis.include],
+#   FUN=function(SEU) grepGenes(
+#     SEU, assay="TAR",
+#     verbose = F,
+#     pattern=c(
+#       # "Myod1",
+#       "chr7-4602"
+#       ),
+#     filter.pattern = c(
+#       "\\+"
+#     )
+#   )
+# )%>% 
+#   unlist() %>%
+#   unique() %>%
+#   sort()
+
+tmp.titles <- stringr::str_remove_all(
+  meta_vis$sample[vis.include],
+  pattern = "Vis_"
+  ) %>%
     stringr::str_remove_all(pattern ="yPAP_")%>%
     stringr::str_remove_all(pattern ="ctrl_")
 
-lapply(
-  vis.list,
-  FUN = function(SEU){
-    tmp.feat <- Features(SEU, assay="TAR")[stringr::str_ends(Features(SEU, assay="TAR"),pattern = "-0")]
-      # grepGenes(SEU, pattern="-0",assay="TAR",sort.by = "expression")
-    
-    visListPlot(
-      SEU,
-      # sample.titles = tmp.titles,
-      assay="TAR",
-      slot = 'data',
-      reduction = 'space',
-      pt.size=0.8,
-      legend.position = "bottom",
-      font.size = 8,
-      nrow = 1,
-      verbose=F,
-      features = tmp.feat
-    )
-  }
-)
+visListPlot(
+  vis.list[vis.include],
+  sample.titles = tmp.titles,
+  assay="TAR",
+  slot = 'data',
+  reduction = 'space',
+  pt.size=0.6,
+  legend.position = "bottom",
+  font.size = 8,
+  nrow = 1,
+  verbose=F,
+  features = tmp.feat
+)&coord_fixed(ratio=1/1.6)
 
 ```
 
 # UMAPs
 ```{r message=FALSE}
-lapply(s
+lapply(
   seu.list,
   FUN = function(SEU) DimPlot(
     SEU,
